# Set build arguments here. See `gn help buildargs`.
is_component_build = false

angle_enable_d3d9 = false
angle_enable_d3d11 = true
angle_enable_d3d11_compositor_native_window = false
angle_enable_gl = false
angle_enable_metal = false
angle_enable_null = false
angle_enable_vulkan = false
angle_enable_essl = false
